# 5-Airflow-Alternatives-for-Data-Orchestration-Tutorial

./: cleaned_data.csv  dagster_pipe.py  dirty_data.csv  etl-deployment.yaml  luigi_pipe.py  prefect_etl.py  readme.md
data/: fetch_data.txt  generate_report.txt  process_data.txt
kedro-etl/: README.md  pyproject.toml
kedro-etl/conf/base/: catalog.yml
kedro-etl/src/kedro_etl/: __init__.py  __main__.py  pipeline_registry.py  settings.py
kedro-etl/src/kedro_etl/pipelines/data_processing/: kedro_pipe.py
mage_ai_etl/: metadata.yaml
mage_ai_etl/data_exporters/: csv_export.py
mage_ai_etl/data_loaders/: create_csv.py  serene_byte.py
mage_ai_etl/pipelines/simple_etl/: metadata.yaml
mage_ai_etl/transformers/: clean_data.py
tmp2_1fctiy/history/: runs.db
tmp2_1fctiy/history/runs/: 1903a18a-73b6-479b-846e-149387dc957d.db  index.db
tmp2_1fctiy/schedules/: schedules.db
tmp2_1fctiy/storage/: clean_data  create_dirty_data
