[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "kedro_etl"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
kedro-etl = "kedro_etl.__main__:main"

[tool.kedro]
package_name = "kedro_etl"
project_name = "kedro_etl"
kedro_init_version = "0.19.6"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "kedro_etl.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
